# drone-driver

./: README.md  com.github.yiwenxue.dronesimulation.json  meson.build
data/: com.github.yiwenxue.dronesimulation.appdata.xml.in  com.github.yiwenxue.dronesimulation.desktop.in  com.github.yiwenxue.dronesimulation.gresource.xml  com.github.yiwenxue.dronesimulation.gschema.xml  meson.build
data/ui/: dronesimulation-window.ui  dronesimulation-window.ui~
po/: POTFILES  meson.build
src/: dronesimulation-window.c  dronesimulation-window.h  gstarea.h  main  main.c  meson.build  plate-gtk.c  plate.c  test.c  video  videoplayer.c
